force-app/main/default/objects/Checklist_Item__c/fields/Checklist_Section__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Section__c</fullName>
    <label>Checklist Section</label>
    <referenceTo>Checklist_Section__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>