force-app/main/default/objects/Checklist_Item__c/fields/Checklist_Type__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Type__c</fullName>
    <label>Checklist Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>