force-app/main/default/objects/Checklist_Item__c/fields/Delegated_Contact_Uploader__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Contact_Uploader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated Contact Uploader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Checklist Items (Delegated Contact Uploader)</relationshipLabel>
    <relationshipName>Checklist_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>