force-app/main/default/objects/Checklist_Item__c/fields/Doc_Structure_Id__c.field-meta.xml
<CustomField>
    <fullName>Doc_Structure_Id__c</fullName>
    <externalId>true</externalId>
    <label>Doc Structure Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>