force-app/main/default/objects/Checklist_Item__c/fields/External_Comments__c.field-meta.xml
<CustomField>
    <fullName>External_Comments__c</fullName>
    <label>External Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>