force-app/main/default/objects/Checklist_Item__c/fields/Folder_String__c.field-meta.xml
<CustomField>
    <fullName>Folder_String__c</fullName>
    <label>Folder String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>