force-app/main/default/objects/Checklist_Item__c/fields/Is_Bulk_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Bulk_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bulk</label>
    <type>Checkbox</type>
</CustomField>