force-app/main/default/objects/Checklist_Item__c/fields/Is_Property_Level__c.field-meta.xml
<CustomField>
    <fullName>Is_Property_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Property Level</label>
    <type>Checkbox</type>
</CustomField>