force-app/main/default/objects/Checklist_Item__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Underwriter</fullName>
                <default>true</default>
                <label>Underwriter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>