force-app/main/default/objects/Checklist_Item__c/fields/Uploader__c.field-meta.xml
<CustomField>
    <fullName>Uploader__c</fullName>
    <label>Uploader</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>