force-app/main/default/objects/Checklist_Item__c/fields/User_Assigned__c.field-meta.xml
<CustomField>
    <fullName>User_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>