force-app/main/default/objects/Checklist_Item__c/recordTypes/Document_Upload.recordType-meta.xml
<RecordType>
    <fullName>Document_Upload</fullName>
    <active>true</active>
    <label>Document Upload</label>
</RecordType>