force-app/main/default/objects/Checklist_Item__c/recordTypes/Task.recordType-meta.xml
<RecordType>
    <fullName>Task</fullName>
    <active>true</active>
    <label>Task</label>
</RecordType>